--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,45 @@
-.App {
-  text-align: center;
+h1 {
+  margin-left: 10px;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+#main-header{
+  padding: 10px;
   display: flex;
-  flex-direction: column;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  justify-content: space-between;
+  box-shadow: 0 8px 8px -8px;
+  position: fixed;
+  top: 0px;
+  width: 100%;
+  height: 60px;
+  background-color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.nav-links {
+  gap: 12px;
+  padding-right: 20px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.nav-link{
+  font-weight: bold;
+}
+
+.nav-link:hover{
+  font-weight: bolder;
+}
+
+
+.one-block-card{
+  box-shadow: 0 8px 8px -8px;
+  padding: 20px;
+  background-color: #eaeaea;
+  border-radius: 20px;
+  width: 400px;
+}
+
+.blocks-list{
+  margin-top: 20px;
+  display: flex;
+  align-items: center;
+  gap: 20px;
 }
